--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,15 +6,15 @@ layout: base
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {{ page.date | date: date_format }}
+      {%- assign title_format = site.minima.title_format | default: "%b %-d, %Y" -%}
+      <time class="dt-published" titletime="{{ page.title | title_to_xmlschema }}" itemprop="titlePublished">
+        {{ page.title | title: title_format }}
       </time>
-      {%- if page.modified_date -%}
+      {%- if page.modified_title -%}
         ~ 
-        {%- assign mdate = page.modified_date | date_to_xmlschema -%}
-        <time class="dt-modified" datetime="{{ mdate }}" itemprop="dateModified">
-          {{ mdate | date: date_format }}
+        {%- assign mtitle = page.modified_title | title_to_xmlschema -%}
+        <time class="dt-modified" titletime="{{ mtitle }}" itemprop="titleModified">
+          {{ mtitle | title: title_format }}
         </time>
       {%- endif -%}
       {%- if page.author -%}
