--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,17 +4,17 @@ layout: base
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+   
     <p class="post-meta">
       {%- assign title_format = site.minima.title_format | default: "%b %-d, %Y" -%}
-      <time class="dt-published" titletime="{{ page.title | title_to_xmlschema }}" itemprop="titlePublished">
+      <time class="dt-published" titletime="{{ page.date | title_to_xmlschema }}" itemprop="titlePublished">
         {{ page.title | title: title_format }}
       </time>
       {%- if page.modified_title -%}
         ~ 
         {%- assign mtitle = page.modified_title | title_to_xmlschema -%}
-        <time class="dt-modified" titletime="{{ mtitle }}" itemprop="titleModified">
-          {{ mtitle | title: title_format }}
+        <time class="dt-modified" date="{{ mtitle }}" itemprop="titleModified">
+          {{ mtitle | title: date_format }}
         </time>
       {%- endif -%}
       {%- if page.author -%}
@@ -23,7 +23,8 @@ layout: base
             <span class="p-author h-card" itemprop="name">{{ author }}</span></span>
             {%- if forloop.last == false %}, {% endif -%}
         {% endfor %}
-      {%- endif -%}</p>
+      {%- endif -%}</p> 
+      <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
