Finally ran the correct code.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,17 +4,17 @@ layout: base
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-   
+    
     <p class="post-meta">
-      {%- assign title_format = site.minima.title_format | default: "%b %-d, %Y" -%}
-      <time class="dt-published" titletime="{{ page.date | title_to_xmlschema }}" itemprop="titlePublished">
-        {{ page.title | title: title_format }}
+      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+        {{ page.date | date: date_format }}
       </time>
-      {%- if page.modified_title -%}
+      {%- if page.modified_date -%}
         ~ 
-        {%- assign mtitle = page.modified_title | title_to_xmlschema -%}
-        <time class="dt-modified" date="{{ mtitle }}" itemprop="titleModified">
-          {{ mtitle | title: date_format }}
+        {%- assign mdate = page.modified_date | date_to_xmlschema -%}
+        <time class="dt-modified" datetime="{{ mdate }}" itemprop="dateModified">
+          {{ mdate | date: date_format }}
         </time>
       {%- endif -%}
       {%- if page.author -%}
