--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
-layout: base
+layout: base 
+author: Noah Chaffin
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
