--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,9 @@
 ---
 layout: base
 ---
-<article class="post">
+<link rel="stylesheet" href="\assets\style.scss">
+<article class="post"> 
+
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
