--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,8 @@
 
     {%- if titles_size > 0 -%}
       <nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+        <input type="checkbox" id="nav-trigger" class="nav-trigger" /> 
+        <a href="https://hendrix-cs.github.io/csci340/">CSCI 340 Databases and Websystems</a>
         <label for="nav-trigger">
           <span class="menu-icon">
             <svg viewBox="0 0 18 15" width="18px" height="15px">
