--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,18 +1,21 @@
----
+--- 
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
-  "minima/initialize"; 
-
+  "minima/initialize";
   
-  
+ 
+  head {
+    color: orange;
+  }
   h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: pink; 
+    color: orange; 
   } 
   p {
-    color: purple;   
+    color: orange;   
     font-family: 'Times New Roman', Times, serif;
-  } 
+  }  
+  
