--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,12 @@
 ---
-layout: base 
+layout: base  
 ---
-
+<link rel="stylesheet" href="\assets\style.scss">
 <div class="home">
   {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
+    <h1 id="pager-header" class="page-heading">{{ page.title }}</h1>
+  {%- endif -%} 
+
 
   {{ content }}
 
@@ -21,7 +22,7 @@ layout: base
     {%- if page.list_title -%}
       <h2 class="post-list-heading">{{ page.list_title }}</h2>
     {%- endif -%}
-    <ul class="post-list">
+    <ul id="the-list" class="post-list">
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       {%- for post in posts -%}
       <li>
