--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<link rel="stylesheet" href="\assets\style.scss">
+<link rel="stylesheet" href="/assets/css/style.scss">
 <article class="post"> 
 
 
