--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<link rel="stylesheet" href="\assets\style.scss">
+<link rel="stylesheet" href="/assets/css/style.scss">
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
