--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: base  
 ---
-<link rel="stylesheet" href="style.scss">
+<link rel="stylesheet" href="/assets/css/style.scss">
 <div class="home">
   {%- if page.title -%}
     <h1 id="pager-header" class="page-heading">{{ page.title }}</h1>
