--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a> 
-    <link rel="stylesheet" href="\assets\style.scss">
+    <link rel="stylesheet" href="/assets/css/style.scss">
 
     {%- if titles_size > 0 -%}
       <nav class="site-nav">
