--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<!-- <head>
+<head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,4 +11,4 @@
 
   {%- include custom-head.html -%}
   
-</head> -->
+</head>
